# silver-octo-winner

./: .env  .gitignore  agents.py  main.py  models.py  requirements.txt  tools.py  vercel.json
agents/: diseases_agents.py  doctor_agents.py  final_medicine_info.json  medicine_agents.py  news_agents.py
models/: models.py
newagent/: README.md  pyproject.toml
newagent/src/newagent/: crew.py  main.py
newagent/src/newagent/config/: agents.yaml
prompts/: diseasePrompt.py  doctorPrompt.py  medicinePrompt.py
tools/: News_tools.py
