[project]
name = "newagent"
version = "0.1.0"
description = "newagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
newagent = "newagent.main:run"
run_crew = "newagent.main:run"
train = "newagent.main:train"
replay = "newagent.main:replay"
test = "newagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
